# news_reporter_agent

./: .gitignore  README.md  pyproject.toml
src/news_reporter/: app.py  crew.py  main.py  news_report.md
src/news_reporter/config/: agents.yaml  tasks.yaml
src/news_reporter/reports/: 2024-12-17_22-36-46_news_report.md  2024-12-17_22-46-22_news_report.md  aws_ai_insights_in_2024_18122024_23-32.md  deloitte_insights_on_ai_18122024_22-03.md  deloitte_insights_on_ai_18122024_23-25.md
